@@ -1,0 +1,218 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<commands>
+
+    <command>
+        <name>checker</name>
+        <description>Run the checksum checker</description>
+        <step>
+            <class>org.dspace.app.checker.ChecksumChecker</class>
+        </step>
+    </command>
+
+    <command>
+        <name>cleanup</name>
+        <description>Remove deleted bitstreams from the assetstore</description>
+        <step>
+            <class>org.dspace.storage.bitstore.Cleanup</class>
+        </step>
+    </command>
+
+    <command>
+        <name>create-administrator</name>
+        <description>Create a DSpace administrator account</description>
+        <step>
+            <class>org.dspace.administer.CreateAdministrator</class>
+        </step>
+    </command>
+
+    <command>
+        <name>dsprop</name>
+        <description>View a DSpace property from dspace.cfg</description>
+        <step>
+            <class>org.dspace.core.ConfigurationManager</class>
+        </step>
+    </command>
+
+    <command>
+        <name>export</name>
+        <description>Export items or collections</description>
+        <step>
+            <class>org.dspace.app.itemexport.ItemExport</class>
+        </step>
+    </command>
+
+    <command>
+        <name>filter-media</name>
+        <description>Perform the media filtering to extract full text from docuemnts and to create thumbnails</description>
+        <step>
+            <class>org.dspace.app.mediafilter.MediaFilterManager</class>
+        </step>
+    </command>
+
+    <command>
+        <name>generate-sitemaps</name>
+        <description>Generate search engine and html sitemaps</description>
+        <step>
+            <class>org.dspace.app.sitemap.GenerateSitemaps</class>
+        </step>
+    </command>
+
+    <command>
+        <name>import</name>
+        <description>Import items into DSpace</description>
+        <step>
+            <class>org.dspace.app.itemimport.ItemImport</class>
+        </step>
+    </command>
+
+    <command>
+        <name>index-init</name>
+        <description>Initialise the search and browse indexes</description>
+        <step passuserargs="false">
+            <class>org.dspace.browse.IndexBrowse</class>
+            <argument>-f</argument>
+            <argument>-r</argument>
+        </step>
+        <step passuserargs="false">
+            <class>org.dspace.browse.ItemCounter</class>
+        </step>
+        <step passuserargs="false">
+            <class>org.dspace.search.DSIndexer</class>
+            <argument>-b</argument>
+        </step>
+    </command>
+
+    <command>
+        <name>index-update</name>
+        <description>Update the search and browse indexes</description>
+        <step passuserargs="false">
+            <class>org.dspace.browse.IndexBrowse</class>
+            <argument>-i</argument>
+        </step>
+        <step passuserargs="false">
+            <class>org.dspace.browse.ItemCounter</class>
+        </step>
+        <step passuserargs="false">
+            <class>org.dspace.search.DSIndexer</class>
+        </step>
+     </command>
+
+    <command>
+        <name>itemcounter</name>
+        <description>Update the item strength counts in the user interface</description>
+        <step passuserargs="false">
+            <class>org.dspace.browse.ItemCounter</class>
+        </step>
+    </command>
+
+    <command>
+        <name>itemupdate</name>
+        <description>Item update tool for altering metadata and bitstream content in items</description>
+        <step>
+            <class>org.dspace.app.itemimport.ItemUpdate</class>
+        </step>
+    </command>
+
+    <command>
+        <name>metadata-export</name>
+        <description>Export metadata for batch editing</description>
+        <step>
+            <class>org.dspace.app.bulkedit.MetadataExport</class>
+        </step>
+    </command>
+
+    <command>
+        <name>metadata-import</name>
+        <description>Import metadata after batch editing</description>
+        <step>
+            <class>org.dspace.app.bulkedit.MetadataImport</class>
+        </step>
+    </command>
+
+    <command>
+        <name>packager</name>
+        <description>Execute a packager</description>
+        <step>
+            <class>org.dspace.app.packager.Packager</class>
+        </step>
+    </command>
+
+    <command>
+        <name>stat-general</name>
+        <description>Compile the general statistics</description>
+        <step passuserargs="false">
+            <class>org.dspace.app.statistics.CreateStatReport</class>
+            <argument>-r stat-general</argument>
+        </step>
+    </command>
+
+    <command>
+        <name>stat-initial</name>
+        <description>Compile the initial statistics</description>
+        <step passuserargs="false">
+            <class>org.dspace.app.statistics.CreateStatReport</class>
+            <argument>-r stat-initial</argument>
+        </step>
+    </command>
+
+    <command>
+        <name>stat-monthly</name>
+        <description>Compile the monthly statistics</description>
+        <step passuserargs="false">
+            <class>org.dspace.app.statistics.CreateStatReport</class>
+            <argument>-r stat-monthly</argument>
+        </step>
+    </command>
+
+    <command>
+        <name>stat-report-general</name>
+        <description>Create the general statistics report</description>
+        <step passuserargs="false">
+            <class>org.dspace.app.statistics.CreateStatReport</class>
+            <argument>-r stat-report-general</argument>
+        </step>
+    </command>
+
+    <command>
+        <name>stat-report-initial</name>
+        <description>Create the general statistics report</description>
+        <step passuserargs="false">
+            <class>org.dspace.app.statistics.CreateStatReport</class>
+            <argument>-r stat-report-initial</argument>
+        </step>
+    </command>
+
+    <command>
+        <name>stat-report-monthly</name>
+        <description>Create the monthly statistics report</description>
+        <step passuserargs="false">
+            <class>org.dspace.app.statistics.CreateStatReport</class>
+            <argument>-r stat-report-monthly</argument>
+        </step>
+    </command>
+
+    <command>
+        <name>structure-builder</name>
+        <description>Build DSpace commnity and collection structure</description>
+        <step>
+            <class>org.dspace.administer.StructBuilder</class>
+        </step>
+    </command>
+
+    <command>
+        <name>sub-daily</name>
+        <description>Send daily subscription notices</description>
+        <step>
+            <class>org.dspace.eperson.Subscribe</class>
+        </step>
+    </command>
+
+    <command>
+        <name>update-handle-prefix</name>
+        <description>Update handle records and metadata when moving from one handle to another</description>
+        <step>
+            <class>org.dspace.handle.UpdateHandlePrefix</class>
+        </step>
+    </command>
+
+</commands>
