@@ -49,6 +49,7 @@
  - [DS-316] Make SWORD app:accepts configurable
  - [DS-318] JSPUI: Left over text in edit item about format
  - [DS-319] Replace '/dspace/bin/dsrun org.dspace.browse.ItemCounter' with /dspace/bin/itemcounter
+ - [DS-321] DSpace command launcher
  - [DS-327] SWORD temp upload directory missing trailling slash
  - [DS-328] SWORD service documents do not include atom:generator element
 
